--- a/favorite-things.html
+++ b/favorite-things.html
@@ -2,11 +2,12 @@
 <html lang="en-US">
 
 <head>
+  <link href="CSS/style.css" rel="stylesheet" type="text/css">
   <title> My favorite Animals</title>
 </head>
 
 <body>
-  <h1>Animal Ranking</h1>
+  <h1> Animal Ranking </h1>
   <div>
     <p>Hi, I’m the animal ranker. I rank animals.</p>
     <p>I am going to list all of my favorite animals and all of my least favorite animals.</p>
