--- a/favorite-things.html
+++ b/favorite-things.html
@@ -12,9 +12,9 @@
     <p>Hi, I’m the animal ranker. I rank animals.</p>
     <p>I am going to list all of my favorite animals and all of my least favorite animals.</p>
   </div>
-  <div>
     <h2>Favorite Animals</h2>
     <p> In order of most favorite: </p>
+    <div class="list-container">
     <ol>
       <li>Cats</li>
       <li>Dogs</li>
@@ -22,9 +22,10 @@
       <li>Elephants</li>
     </ol>
   </div>
-  <div>
-    <h2>Least Favorite Animals</h2>
-    <p>In no particular order. All are F rank:</p>
+  <br>
+  <h2>Least Favorite Animals</h2>
+  <p>In no particular order. All are F rank:</p>
+  <div class="list-container">
     <ul>
       <li>Lobsters</li>
       <li>Cheetahs</li>
